--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -124,14 +124,27 @@ body {
   color: var(--ifm-font-color-base);
 }
 
+.card {
+  border: solid 2px var(--stakely-background-01);
+}
+
+.card:hover {
+  border: solid 2px var(--stakely-background-04);
+}
+
 [data-theme="dark"] .card {
   background-color: rgba(44, 46, 57, 0.4);
   color: var(--stakely-background-00);
   box-shadow: 0 8px 15px 2px rgba(35, 37, 46, 0.2);
+  border: solid 2px var(--stakely-background-05);
 }
 
 [data-theme="dark"] .card__header h3 {
   color:  var(--stakely-primary-egg-white);
+}
+
+[data-theme="dark"]  .card:hover {
+  border: solid 2px var(--stakely-primary-orange);
 }
 
 [data-theme="dark"]  .card:hover .card__header h3 {
