--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -54,6 +54,21 @@ html[data-theme="dark"] .header--github-link:before {
   --stakely-background-03: #0C1947;
   --stakely-background-04: #14296F;
   --stakely-background-05: #252F59;
+  --stakely-background-06: #0D1847;
+  --stakely-background-07: #2F3568;
+
+  --stakely-secondary-yellow-high: #F59D1F;
+  --stakely-secondary-yellow-medium: #F7C174;
+  --stakely-secondary-yellow-low: #FAEEDE;
+  --stakely-secondary-red-high: #F31715;
+  --stakely-secondary-red-medium: #F75D5C;
+  --stakely-secondary-red-low: #FFD3D3;
+  --stakely-secondary-blue-high: #0B8EE5;
+  --stakely-secondary-blue-medium: #4FB4F7;
+  --stakely-secondary-blue-low: #CFECFF;
+  --stakely-secondary-green-high: #07892D;
+  --stakely-secondary-green-medium: #4DBE6E;
+  --stakely-secondary-green-low: #D7FFE2;
 
   --ifm-font-color-base: var(--stakely-background-03);
   --ifm-menu-color-active: var(--stakely-primary-orange);
@@ -74,6 +89,7 @@ html[data-theme="dark"] .header--github-link:before {
 
   --ifm-navbar-background-color: var(--stakely-background-01);
   --ifm-background-color: var(--stakely-background-00) !important;
+  --ifm-color-info-dark: var(--stakely-secondary-blue-medium);
 }
 
 
@@ -230,4 +246,65 @@ body {
 .footer__link-item:active {
   text-decoration: none;
   color: var(--ifm-font-color-base);
+}
+
+/** Banners **/
+.theme-admonition-info {
+  background-color: var(--stakely-secondary-blue-low);
+  border-left: 5px solid var(--stakely-secondary-blue-medium) !important;
+}
+
+[data-theme="dark"] .theme-admonition-info {
+  background-color: var(--stakely-background-03);
+}
+
+.theme-admonition-warning {
+  background-color: var(--stakely-secondary-yellow-low);
+  border-left: 5px solid var(--stakely-secondary-yellow-medium) !important;
+}
+
+[data-theme="dark"] .theme-admonition-warning {
+  background-color: var(--stakely-background-03);
+}
+
+.theme-admonition-tip {
+  background-color: var(--stakely-secondary-green-low);
+  border-left: 5px solid var(--stakely-secondary-green-medium) !important;
+}
+
+[data-theme="dark"] .theme-admonition-tip {
+  background-color: var(--stakely-background-03);
+}
+
+.theme-admonition-danger {
+  background-color: var(--stakely-secondary-red-low);
+  border-left: 5px solid var(--stakely-secondary-red-medium) !important;
+}
+
+[data-theme="dark"] .theme-admonition-danger {
+  background-color: var(--stakely-background-03);
+}
+
+.theme-admonition-note {
+  background-color: var(--stakely-background-01) !important;
+  border-left: 5px solid var(--stakely-background-02) !important;
+}
+
+[data-theme="dark"] .theme-admonition-note {
+  background-color: var(--stakely-background-03) !important;
+}
+
+details {
+  background-color: var(--stakely-secondary-blue-low);
+  border: none !important;
+  border-left: 5px solid var(--stakely-secondary-blue-medium) !important;
+}
+
+details summary::before {
+  color: red
+}
+
+[data-theme="dark"] details {
+  border-color: red;
+  background-color: var(--stakely-background-03);
 }
