--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,35 +5,14 @@
  DOCS:  https://docusaurus.community/knowledge/design/css/variables/
  */
 
+ @import "header.css";
+ @import "footer.css";
+ @import "card.css";
+ @import "banner.css";
  @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
  .menu__link--active {
   font-weight: 500;
-}
-
-.navbar__link {
-  font-weight: 500;
-}
-
-.header--github-link {
-  width: 32px;
-  height: 32px;
-  padding: 6px;
-  margin-right: 4px;
-  border-radius: 50%;
-  transition: background var(--ifm-transition-fast);
-}
-
-.header--github-link:hover {
-  background: var(--ifm-color-emphasis-200);
-}
-
-.header--github-link:before {
-  content: "";
-  height: 100%;
-  display: block;
-  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
-    no-repeat;
 }
 
 html[data-theme="dark"] .header--github-link:before {
@@ -124,243 +103,4 @@ html[data-theme="dark"] .header--github-link:before {
 
 body {
   background: var(--ifm-background-color);
-}
-
-
-.card {
-  border: solid 2px var(--stakely-background-01);
-}
-
-.card:hover {
-  border: solid 2px var(--stakely-background-04);
-}
-
-[data-theme="dark"] .card {
-  background-color: rgba(44, 46, 57, 0.4);
-  color: var(--stakely-background-00);
-  box-shadow: 0 8px 15px 2px rgba(35, 37, 46, 0.2);
-  border: solid 2px var(--stakely-background-05);
-}
-
-[data-theme="dark"] .card__header h3 {
-  color:  var(--stakely-primary-egg-white);
-}
-
-[data-theme="dark"]  .card:hover {
-  border: solid 2px var(--stakely-primary-orange);
-}
-
-[data-theme="dark"]  .card:hover .card__header h3 {
-  color:  var(--ifm-color-primary);
-}
-
-.cards__container {
-  margin: 3em 0;
-}
-
-.cards__container .col {
-  margin-bottom: 3em;
-}
-
-.card {
-  padding: 1rem;
-  margin-top: 0rem;
-  animation: fadeInUp 400ms backwards;
-  animation-delay: 150ms;
-  transition-property: all;
-  transition-duration: 200ms;
-  align-items: start;
-  height: 100%;
-  box-shadow: 0 8px 15px 2px rgba(86, 91, 115, 0.2);
-}
-
-.card a {
-  text-decoration: none;
-}
-
-.card:hover {
-  transform: translate(0px, -5px);
-}
-
-.card__header {
-  display: flex;
-  gap: 16px;
-  align-items: center;
-}
-.card__header h3 {
-  color: var(--stakely-background-04);
-}
-
-/* Footer styles */
-.footer {
-  background-color: var(--ifm-footer-bg-color);
-  border-top: solid 2px var(--ifm-footer-border-color);
-  color: var(--ifm-font-color-base);
-}
-
-.footer a {
-  color: var(--ifm-font-color-base);
-}
-
-.footer div {
-  color: var(--ifm-font-color-base);
-}
-
-.footer ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-.footer__link-item svg {
-  fill: var(--stakely-primary-orange);
-  height: 13px;
-  width: 13px;
-}
-
-.footer__link-item {
-  position: relative;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  gap: 4px;
-}
-
-.footer__link-item::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 2px;
-  width: 0;
-  height: 3px;
-  background-color: var(--stakely-primary-orange);
-  transition: width 0.2s ease-in-out;
-}
-
-.footer__link-item:hover::after {
-  width: 100%;
-  text-decoration: none;
-}
-
-.footer__link-item:hover,
-.footer__link-item:focus,
-.footer__link-item:active {
-  text-decoration: none;
-  color: var(--ifm-font-color-base);
-}
-
-/** Banners **/
-.theme-admonition-info {
-  background-color: var(--stakely-secondary-blue-low);
-  border-left: 5px solid var(--stakely-secondary-blue-medium) !important;
-}
-
-[data-theme="dark"] .theme-admonition-info {
-  background-color: var(--stakely-background-03);
-}
-
-.theme-admonition-warning {
-  background-color: var(--stakely-secondary-yellow-low);
-  border-left: 5px solid var(--stakely-secondary-yellow-medium) !important;
-}
-
-[data-theme="dark"] .theme-admonition-warning {
-  background-color: var(--stakely-background-03);
-}
-
-.theme-admonition-tip {
-  background-color: var(--stakely-secondary-green-low);
-  border-left: 5px solid var(--stakely-secondary-green-medium) !important;
-}
-
-[data-theme="dark"] .theme-admonition-tip {
-  background-color: var(--stakely-background-03);
-}
-
-.theme-admonition-danger {
-  background-color: var(--stakely-secondary-red-low);
-  border-left: 5px solid var(--stakely-secondary-red-medium) !important;
-}
-
-[data-theme="dark"] .theme-admonition-danger {
-  background-color: var(--stakely-background-03);
-}
-
-.theme-admonition-note {
-  background-color: var(--stakely-background-01) !important;
-  border-left: 5px solid var(--stakely-background-02) !important;
-}
-
-[data-theme="dark"] .theme-admonition-note {
-  background-color: var(--stakely-background-03) !important;
-}
-
-details {
-  background-color: var(--stakely-secondary-blue-low);
-  border: none !important;
-  border-left: 5px solid var(--stakely-secondary-blue-medium) !important;
-}
-
-[data-theme="dark"] details {
-  background-color: var(--stakely-background-03);
-}
-
-/** Header links **/
-.navbar__item {
-  border-radius: 8px;
-  transition: all 0.3s ease-in-out;
-  padding: 8px 16px;
-}
-
-.navbar__item:hover {
-  padding: 8px 26px 8px 16px;
-  background-color: var(--stakely-background-02);
-  color: var(--ifm-font-color-base);
-  margin-right: -10px;
-}
-
-[data-theme="dark"] .navbar__item:hover {
-  background-color: var(--stakely-background-05);
-}
-
-.navbar__item::after {
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar__item:hover::after {
-  opacity: 1;
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='12' viewBox='0 0 8 12' fill='none'%3E%3Cpath d='M6.83 5.28995L2.59 1.04995C2.49704 0.95622 2.38644 0.881826 2.26458 0.831057C2.14272 0.780288 2.01202 0.75415 1.88 0.75415C1.74799 0.75415 1.61729 0.780288 1.49543 0.831057C1.37357 0.881826 1.26297 0.95622 1.17 1.04995C0.983753 1.23731 0.879211 1.49076 0.879211 1.75495C0.879211 2.01913 0.983753 2.27259 1.17 2.45995L4.71 5.99995L1.17 9.53995C0.983753 9.72731 0.879211 9.98076 0.879211 10.2449C0.879211 10.5091 0.983753 10.7626 1.17 10.9499C1.26344 11.0426 1.37426 11.116 1.4961 11.1657C1.61794 11.2155 1.7484 11.2407 1.88 11.2399C2.01161 11.2407 2.14207 11.2155 2.26391 11.1657C2.38575 11.116 2.49656 11.0426 2.59 10.9499L6.83 6.70995C6.92373 6.61699 6.99813 6.50638 7.04889 6.38453C7.09966 6.26267 7.1258 6.13196 7.1258 5.99995C7.1258 5.86794 7.09966 5.73723 7.04889 5.61537C6.99813 5.49351 6.92373 5.38291 6.83 5.28995Z' fill='currentColor'/%3E%3C/svg%3E");
-  vertical-align: middle;
-  margin-left: 8px;
-  position: absolute;
-}
-
-
-[data-theme="dark"] .navbar__item:hover::after {
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='12' viewBox='0 0 8 12' fill='none'%3E%3Cpath d='M6.83 5.28995L2.59 1.04995C2.49704 0.95622 2.38644 0.881826 2.26458 0.831057C2.14272 0.780288 2.01202 0.75415 1.88 0.75415C1.74799 0.75415 1.61729 0.780288 1.49543 0.831057C1.37357 0.881826 1.26297 0.95622 1.17 1.04995C0.983753 1.23731 0.879211 1.49076 0.879211 1.75495C0.879211 2.01913 0.983753 2.27259 1.17 2.45995L4.71 5.99995L1.17 9.53995C0.983753 9.72731 0.879211 9.98076 0.879211 10.2449C0.879211 10.5091 0.983753 10.7626 1.17 10.9499C1.26344 11.0426 1.37426 11.116 1.4961 11.1657C1.61794 11.2155 1.7484 11.2407 1.88 11.2399C2.01161 11.2407 2.14207 11.2155 2.26391 11.1657C2.38575 11.116 2.49656 11.0426 2.59 10.9499L6.83 6.70995C6.92373 6.61699 6.99813 6.50638 7.04889 6.38453C7.09966 6.26267 7.1258 6.13196 7.1258 5.99995C7.1258 5.86794 7.09966 5.73723 7.04889 5.61537C6.99813 5.49351 6.92373 5.38291 6.83 5.28995Z' fill='%23FFF'/%3E%3C/svg%3E");
-}
-
-.navbar__link--active {
-  color: var(--ifm-font-color-base);
-  font-weight: 700;
-}
-
-/** Navbar right elements */
-.navbar__items--right .navbar__item svg {
-  display: none;
-}
-
-.navbar__items--right .navbar__item::after {
-  margin-top: 4px;
-  margin-left: 6px;
-  position: absolute;
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M17.92 6.62C17.8185 6.37565 17.6243 6.18147 17.38 6.08C17.2598 6.02876 17.1307 6.00158 17 6H7C6.73478 6 6.48043 6.10536 6.29289 6.29289C6.10536 6.48043 6 6.73478 6 7C6 7.26522 6.10536 7.51957 6.29289 7.70711C6.48043 7.89464 6.73478 8 7 8H14.59L6.29 16.29C6.19627 16.383 6.12188 16.4936 6.07111 16.6154C6.02034 16.7373 5.9942 16.868 5.9942 17C5.9942 17.132 6.02034 17.2627 6.07111 17.3846C6.12188 17.5064 6.19627 17.617 6.29 17.71C6.38296 17.8037 6.49356 17.8781 6.61542 17.9289C6.73728 17.9797 6.86799 18.0058 7 18.0058C7.13201 18.0058 7.26272 17.9797 7.38458 17.9289C7.50644 17.8781 7.61704 17.8037 7.71 17.71L16 9.41V17C16 17.2652 16.1054 17.5196 16.2929 17.7071C16.4804 17.8946 16.7348 18 17 18C17.2652 18 17.5196 17.8946 17.7071 17.7071C17.8946 17.5196 18 17.2652 18 17V7C17.9984 6.86932 17.9712 6.74022 17.92 6.62Z' fill='black'/%3E%3C/svg%3E");
-}
-
-[data-theme="dark"] .navbar__items--right .navbar__item::after {
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M17.92 6.62C17.8185 6.37565 17.6243 6.18147 17.38 6.08C17.2598 6.02876 17.1307 6.00158 17 6H7C6.73478 6 6.48043 6.10536 6.29289 6.29289C6.10536 6.48043 6 6.73478 6 7C6 7.26522 6.10536 7.51957 6.29289 7.70711C6.48043 7.89464 6.73478 8 7 8H14.59L6.29 16.29C6.19627 16.383 6.12188 16.4936 6.07111 16.6154C6.02034 16.7373 5.9942 16.868 5.9942 17C5.9942 17.132 6.02034 17.2627 6.07111 17.3846C6.12188 17.5064 6.19627 17.617 6.29 17.71C6.38296 17.8037 6.49356 17.8781 6.61542 17.9289C6.73728 17.9797 6.86799 18.0058 7 18.0058C7.13201 18.0058 7.26272 17.9797 7.38458 17.9289C7.50644 17.8781 7.61704 17.8037 7.71 17.71L16 9.41V17C16 17.2652 16.1054 17.5196 16.2929 17.7071C16.4804 17.8946 16.7348 18 17 18C17.2652 18 17.5196 17.8946 17.7071 17.7071C17.8946 17.5196 18 17.2652 18 17V7C17.9984 6.86932 17.9712 6.74022 17.92 6.62Z' fill='%23FFF'/%3E%3C/svg%3E");
-}
-
-.navbar__items--right .navbar__item {
-  margin-right: 1px;
 }
